[tool.poetry]
name = "icon-rhizome-dev"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"
packages = [{include = "icon_rhizome_dev"}]

[tool.poetry.dependencies]
python = "^3.11"
iconsdk = "^2.2.0"
python-dotenv = "^0.21.0"
jinja2-fragments = "^0.3.0"
httpx = "^0.23.1"
orjson = "^3.8.3"
starlite = {extras = ["brotli", "redis"], version = "^1.49.0"}
boto3 = "^1.26.49"
pandas = "^1.5.2"
gunicorn = "^20.1.0"
rich = "^13.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
yarl = "^1.8.2"
django-htmlmin = "^0.11.0"
starlette = "^0.23.1"
piccolo = {extras = ["sqlite"], version = "^0.105.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.253"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
